force-app/main/default/objects/Course__c/fields/Alternative_Category__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternative Category</label>
    <referenceTo>Course_Categorty__c</referenceTo>
    <relationshipLabel>Courses (Alternative Category)</relationshipLabel>
    <relationshipName>Courses1</relationshipName>
    <type>Lookup</type>
</CustomField>