force-app/main/default/objects/Course__c/fields/class_id__c.field-meta.xml
<CustomField>
    <fullName>class_id__c</fullName>
    <label>class_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>